Добавлены настройки для github.io

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio-start",
   "version": "0.1.0",
+  "homepage": "https://git146671.github.io/portfo",
   "private": true,
   "dependencies": {
     "@babel/core": "7.16.0",
@@ -64,6 +65,8 @@
     "workbox-webpack-plugin": "6.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -88,7 +91,8 @@
   },
   "devDependencies": {
     "@types/styled-components": "5.1.26",
-    "babel-plugin-styled-components": "2.0.7"
+    "babel-plugin-styled-components": "2.0.7",
+    "gh-pages": "^6.0.0"
   },
   "jest": {
     "roots": [
